--- a/01_Ingestion.ipynb
+++ b/01_Ingestion.ipynb
@@ -559,7 +559,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\nNumber of rows in this file 417164\n\nroot\n |-- key: string (nullable = true)\n |-- offset: long (nullable = true)\n |-- partition: long (nullable = true)\n |-- timestamp: long (nullable = true)\n |-- topic: string (nullable = true)\n |-- value: string (nullable = true)\n\n\n -> part-00004-tid-358676900307454419-9a6ae6ec-a431-4418-90b5-95bfbeed9fa7-380-1-c000.json\n\n"
+      "\nNumber of rows in this file 417,164\n\nroot\n |-- key: string (nullable = true)\n |-- offset: long (nullable = true)\n |-- partition: long (nullable = true)\n |-- timestamp: long (nullable = true)\n |-- topic: string (nullable = true)\n |-- value: string (nullable = true)\n\n\n -> part-00004-tid-358676900307454419-9a6ae6ec-a431-4418-90b5-95bfbeed9fa7-380-1-c000.json\n\n"
      ]
     },
     {
@@ -928,8 +928,9 @@
     "    display(spark.read.json(f\"{files_path}/{file}\").limit(10))\n",
     "    \n",
     "    # Display the size of this file\n",
+    "    total = spark.read.json(f\"{files_path}/{file}\").count()\n",
     "    print(\"\")\n",
-    "    print(\"Number of rows in this file\", spark.read.json(f\"{files_path}/{file}\").count())\n",
+    "    print(f\"Number of rows in this file {total:,}\")\n",
     "    print(\"\")\n",
     "    \n",
     "    # Display the schema of this file\n",
