--- a/02_Transforming.ipynb
+++ b/02_Transforming.ipynb
@@ -21080,7 +21080,7 @@
      "inputWidgets": {},
      "nuid": "93870ea3-0a5f-4f95-b708-595e48fa5421",
      "showTitle": true,
-     "title": "FInal Query"
+     "title": "Final Query"
     }
    },
    "outputs": [
@@ -21975,9 +21975,24 @@
     "## Portfolio Closing Comments\n",
     "\n",
     "Well, that wraps up what I had in mind for these notebooks.<br>\n",
-    "I trust I've been able to showcase some of my skills. If you have any questions or want to connect further, don't hesitate to reach out to me on LinkedIn [add URL] or via email at [add email].<br>\n",
+    "I trust I've been able to showcase some of my skills. If you have any questions or want to connect further, don't hesitate to reach out to me on LinkedIn www.linkedin.com/in/luiz-felipe-borges-37256216b or via email at felipe.borges_11@hotmail.com.<br>\n",
     "Looking forward to connecting!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "81deab6d-058d-49bc-8f1c-bd971193de0d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
